--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<postgresql-version>42.5.0</postgresql-version>
 		<gson-version>2.10</gson-version>
 	</properties>
 
@@ -43,9 +42,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>${postgresql-version}</version>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
