--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,14 @@
 	</parent>
 	<groupId>cl.bci</groupId>
 	<artifactId>bciexercise</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>bciexercise</name>
 	<description>Ejercicio BCI</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<gson-version>2.10</gson-version>
+		<java-jwt-version>4.2.1</java-jwt-version>
 	</properties>
 
 	<dependencies>
@@ -59,6 +60,16 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>${gson-version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>${java-jwt-version}</version>
 		</dependency>
 
 	</dependencies>
